# ml-final-project

./: .gitignore  .~lock.flight_features.csv#  ETL.md  README.md  docker-compose.yml  flight_features.csv  main.py  pyproject.toml  requirements.txt  test.py
airflow/: Dockerfile  requirements-airflow.txt
airflow/dags/: 01_initial_backfill.py  02_model_training.py  03_incremental_ingestion.py  historical_backfill.py
app/: Dockerfile  __init__.py  feature_service.py  main.py  model_service.py  realtime_service.py  schemas.py
databricks/bronze/: bronze_airports.ipynb  bronze_flights.ipynb  bronze_notams.ipynb
docker/: docker-compose.airflow.yml  docker-compose.kafka.yml
factory/: pipeline-dev-adf.json
infra/: .gitignore  backend.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
ingestion/: config.py  kafka_producer.py  requirements.txt  utils.py
mlflow/: Dockerfile
models/: flight_delay_classifier.joblib  flight_delay_classifier_metadata.json  flight_delay_regressor_metadata.json  two_stage_model_metadata.json
notebooks/: 01_eda.ipynb  02_model_training_from_cleaned_FINAL.ipynb  03_two_stage_training.ipynb
pipeline/: cursors.py  db.py  flight_delay_historical_backfill.json  kafka_consumer.py
scripts/: consume_topics.sh  create_topics.sh
sql/: 001_create_schemas.sql  002_bronze_tables.sql  003_silver_tables.sql  004_gold_tables.sql  005_state_tables.sql  init.sql
terraform/: locals.tf  main.tf  outputs.tf  providers.tf  secrets.auto.tfvars.example  terraform.tfvars.example  variables.tf
training/: __init__.py  common.py  register_models.py  train_all.py  train_classifier.py  train_regressor.py
(+42 files in other folders)
